examples: Remove obsolete repo-ng examples.

--- a/Makefile.in
+++ b/Makefile.in
@@ -145,8 +145,7 @@ noinst_PROGRAMS = bin/test-channel-discovery$(EXEEXT) \
 	bin/test-publish-async-nfd-lite$(EXEEXT) \
 	bin/test-register-route$(EXEEXT) \
 	bin/test-sign-verify-data-hmac$(EXEEXT) \
-	bin/analog-reading-consumer$(EXEEXT) \
-	bin/basic-insertion$(EXEEXT) bin/watched-insertion$(EXEEXT)
+	bin/analog-reading-consumer$(EXEEXT)
 TESTS = $(check_PROGRAMS)
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -438,9 +437,6 @@ am_bin_analog_reading_consumer_OBJECTS =  \
 bin_analog_reading_consumer_OBJECTS =  \
 	$(am_bin_analog_reading_consumer_OBJECTS)
 bin_analog_reading_consumer_DEPENDENCIES = libndn-ind.la
-bin_basic_insertion_SOURCES = bin/basic-insertion.c
-bin_basic_insertion_OBJECTS = bin/basic-insertion.$(OBJEXT)
-bin_basic_insertion_LDADD = $(LDADD)
 am_bin_test_channel_discovery_OBJECTS =  \
 	examples/test-channel-discovery.$(OBJEXT)
 bin_test_channel_discovery_OBJECTS =  \
@@ -740,9 +736,6 @@ am_bin_unit_tests_test_verification_rules_OBJECTS = tests/unit-tests/bin_unit_te
 bin_unit_tests_test_verification_rules_OBJECTS =  \
 	$(am_bin_unit_tests_test_verification_rules_OBJECTS)
 bin_unit_tests_test_verification_rules_DEPENDENCIES = libndn-ind.la
-bin_watched_insertion_SOURCES = bin/watched-insertion.c
-bin_watched_insertion_OBJECTS = bin/watched-insertion.$(OBJEXT)
-bin_watched_insertion_LDADD = $(LDADD)
 SCRIPTS = $(dist_noinst_SCRIPTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -759,9 +752,7 @@ am__v_at_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)/include
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__maybe_remake_depfiles = depfiles
-am__depfiles_remade = bin/$(DEPDIR)/basic-insertion.Po \
-	bin/$(DEPDIR)/watched-insertion.Po \
-	contrib/apache/$(DEPDIR)/apr_base64.Plo \
+am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_access_manager_v2-gtest-all.Po \
 	contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_certificate-gtest-all.Po \
 	contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_control_parameters_encode_decode-gtest-all.Po \
@@ -1135,7 +1126,7 @@ am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
 SOURCES = $(libndn_c_la_SOURCES) $(libndn_ind_tools_la_SOURCES) \
 	$(libndn_ind_la_SOURCES) \
-	$(bin_analog_reading_consumer_SOURCES) bin/basic-insertion.c \
+	$(bin_analog_reading_consumer_SOURCES) \
 	$(bin_test_channel_discovery_SOURCES) \
 	$(bin_test_chrono_chat_SOURCES) \
 	$(bin_test_echo_consumer_SOURCES) \
@@ -1189,11 +1180,10 @@ SOURCES = $(libndn_c_la_SOURCES) $(libndn_ind_tools_la_SOURCES) \
 	$(bin_unit_tests_test_validation_policy_config_SOURCES) \
 	$(bin_unit_tests_test_validator_SOURCES) \
 	$(bin_unit_tests_test_validator_null_SOURCES) \
-	$(bin_unit_tests_test_verification_rules_SOURCES) \
-	bin/watched-insertion.c
+	$(bin_unit_tests_test_verification_rules_SOURCES)
 DIST_SOURCES = $(libndn_c_la_SOURCES) $(libndn_ind_tools_la_SOURCES) \
 	$(libndn_ind_la_SOURCES) \
-	$(bin_analog_reading_consumer_SOURCES) bin/basic-insertion.c \
+	$(bin_analog_reading_consumer_SOURCES) \
 	$(bin_test_channel_discovery_SOURCES) \
 	$(bin_test_chrono_chat_SOURCES) \
 	$(bin_test_echo_consumer_SOURCES) \
@@ -1247,8 +1237,7 @@ DIST_SOURCES = $(libndn_c_la_SOURCES) $(libndn_ind_tools_la_SOURCES) \
 	$(bin_unit_tests_test_validation_policy_config_SOURCES) \
 	$(bin_unit_tests_test_validator_SOURCES) \
 	$(bin_unit_tests_test_validator_null_SOURCES) \
-	$(bin_unit_tests_test_verification_rules_SOURCES) \
-	bin/watched-insertion.c
+	$(bin_unit_tests_test_verification_rules_SOURCES)
 RECURSIVE_TARGETS = all-recursive check-recursive cscopelist-recursive \
 	ctags-recursive dvi-recursive html-recursive info-recursive \
 	install-data-recursive install-dvi-recursive \
@@ -3288,15 +3277,6 @@ bin/$(am__dirstamp):
 bin/analog-reading-consumer$(EXEEXT): $(bin_analog_reading_consumer_OBJECTS) $(bin_analog_reading_consumer_DEPENDENCIES) $(EXTRA_bin_analog_reading_consumer_DEPENDENCIES) bin/$(am__dirstamp)
 	@rm -f bin/analog-reading-consumer$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(bin_analog_reading_consumer_OBJECTS) $(bin_analog_reading_consumer_LDADD) $(LIBS)
-bin/$(DEPDIR)/$(am__dirstamp):
-	@$(MKDIR_P) bin/$(DEPDIR)
-	@: > bin/$(DEPDIR)/$(am__dirstamp)
-bin/basic-insertion.$(OBJEXT): bin/$(am__dirstamp) \
-	bin/$(DEPDIR)/$(am__dirstamp)
-
-bin/basic-insertion$(EXEEXT): $(bin_basic_insertion_OBJECTS) $(bin_basic_insertion_DEPENDENCIES) $(EXTRA_bin_basic_insertion_DEPENDENCIES) bin/$(am__dirstamp)
-	@rm -f bin/basic-insertion$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(bin_basic_insertion_OBJECTS) $(bin_basic_insertion_LDADD) $(LIBS)
 examples/$(am__dirstamp):
 	@$(MKDIR_P) examples
 	@: > examples/$(am__dirstamp)
@@ -3861,16 +3841,9 @@ contrib/gtest-1.7.0/fused-src/gtest/bin_unit_tests_test_verification_rules-gtest
 bin/unit-tests/test-verification-rules$(EXEEXT): $(bin_unit_tests_test_verification_rules_OBJECTS) $(bin_unit_tests_test_verification_rules_DEPENDENCIES) $(EXTRA_bin_unit_tests_test_verification_rules_DEPENDENCIES) bin/unit-tests/$(am__dirstamp)
 	@rm -f bin/unit-tests/test-verification-rules$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(bin_unit_tests_test_verification_rules_OBJECTS) $(bin_unit_tests_test_verification_rules_LDADD) $(LIBS)
-bin/watched-insertion.$(OBJEXT): bin/$(am__dirstamp) \
-	bin/$(DEPDIR)/$(am__dirstamp)
-
-bin/watched-insertion$(EXEEXT): $(bin_watched_insertion_OBJECTS) $(bin_watched_insertion_DEPENDENCIES) $(EXTRA_bin_watched_insertion_DEPENDENCIES) bin/$(am__dirstamp)
-	@rm -f bin/watched-insertion$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(bin_watched_insertion_OBJECTS) $(bin_watched_insertion_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
-	-rm -f bin/*.$(OBJEXT)
 	-rm -f contrib/apache/*.$(OBJEXT)
 	-rm -f contrib/apache/*.lo
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/*.$(OBJEXT)
@@ -3963,8 +3936,6 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@bin/$(DEPDIR)/basic-insertion.Po@am__quote@ # am--include-marker
-@AMDEP_TRUE@@am__include@ @am__quote@bin/$(DEPDIR)/watched-insertion.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@contrib/apache/$(DEPDIR)/apr_base64.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_access_manager_v2-gtest-all.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_certificate-gtest-all.Po@am__quote@ # am--include-marker
@@ -6440,7 +6411,6 @@ clean-generic:
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
-	-rm -f bin/$(DEPDIR)/$(am__dirstamp)
 	-rm -f bin/$(am__dirstamp)
 	-rm -f bin/unit-tests/$(am__dirstamp)
 	-rm -f contrib/apache/$(DEPDIR)/$(am__dirstamp)
@@ -6546,9 +6516,7 @@ clean-am: clean-checkPROGRAMS clean-generic clean-libLTLIBRARIES \
 
 distclean: distclean-recursive
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
-		-rm -f bin/$(DEPDIR)/basic-insertion.Po
-	-rm -f bin/$(DEPDIR)/watched-insertion.Po
-	-rm -f contrib/apache/$(DEPDIR)/apr_base64.Plo
+		-rm -f contrib/apache/$(DEPDIR)/apr_base64.Plo
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_access_manager_v2-gtest-all.Po
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_certificate-gtest-all.Po
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_control_parameters_encode_decode-gtest-all.Po
@@ -6940,9 +6908,7 @@ installcheck-am:
 maintainer-clean: maintainer-clean-recursive
 	-rm -f $(am__CONFIG_DISTCLEAN_FILES)
 	-rm -rf $(top_srcdir)/autom4te.cache
-		-rm -f bin/$(DEPDIR)/basic-insertion.Po
-	-rm -f bin/$(DEPDIR)/watched-insertion.Po
-	-rm -f contrib/apache/$(DEPDIR)/apr_base64.Plo
+		-rm -f contrib/apache/$(DEPDIR)/apr_base64.Plo
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_access_manager_v2-gtest-all.Po
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_certificate-gtest-all.Po
 	-rm -f contrib/gtest-1.7.0/fused-src/gtest/$(DEPDIR)/bin_unit_tests_test_control_parameters_encode_decode-gtest-all.Po
