--- a/Makefile.in
+++ b/Makefile.in
@@ -225,6 +225,7 @@ am_libndn_c_la_OBJECTS = $(am__objects_1) contrib/apache/apr_base64.lo \
 	src/c/encoding/tlv/tlv-signature-info.lo \
 	src/c/encoding/tlv/tlv-structure-decoder.lo \
 	src/c/encrypt/algo/aes-algorithm_c.lo \
+	src/c/encrypt/algo/chacha20-algorithm_c.lo \
 	src/c/encrypt/algo/des-algorithm_c.lo \
 	src/c/lp/congestion-mark_c.lo src/c/lp/incoming-face-id_c.lo \
 	src/c/security/ec-private-key.lo \
@@ -271,6 +272,7 @@ am__objects_2 = $(am__objects_1) contrib/apache/apr_base64.lo \
 	src/c/encoding/tlv/tlv-signature-info.lo \
 	src/c/encoding/tlv/tlv-structure-decoder.lo \
 	src/c/encrypt/algo/aes-algorithm_c.lo \
+	src/c/encrypt/algo/chacha20-algorithm_c.lo \
 	src/c/encrypt/algo/des-algorithm_c.lo \
 	src/c/lp/congestion-mark_c.lo src/c/lp/incoming-face-id_c.lo \
 	src/c/security/ec-private-key.lo \
@@ -321,6 +323,7 @@ am_libndn_ind_la_OBJECTS = $(am__objects_2) $(am__objects_1) \
 	src/lite/encoding/tlv-0_3-wire-format-lite.lo \
 	src/lite/encrypt/encrypted-content-lite.lo \
 	src/lite/encrypt/algo/aes-algorithm-lite.lo \
+	src/lite/encrypt/algo/chacha20-algorithm-lite.lo \
 	src/lite/encrypt/algo/des-algorithm-lite.lo \
 	src/lite/lp/congestion-mark-lite.lo \
 	src/lite/lp/incoming-face-id-lite.lo \
@@ -806,6 +809,7 @@ am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	src/c/encoding/tlv/$(DEPDIR)/tlv-signature-info.Plo \
 	src/c/encoding/tlv/$(DEPDIR)/tlv-structure-decoder.Plo \
 	src/c/encrypt/algo/$(DEPDIR)/aes-algorithm_c.Plo \
+	src/c/encrypt/algo/$(DEPDIR)/chacha20-algorithm_c.Plo \
 	src/c/encrypt/algo/$(DEPDIR)/des-algorithm_c.Plo \
 	src/c/lp/$(DEPDIR)/congestion-mark_c.Plo \
 	src/c/lp/$(DEPDIR)/incoming-face-id_c.Plo \
@@ -859,6 +863,7 @@ am__depfiles_remade = contrib/apache/$(DEPDIR)/apr_base64.Plo \
 	src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo \
 	src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo \
 	src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo \
+	src/lite/encrypt/algo/$(DEPDIR)/chacha20-algorithm-lite.Plo \
 	src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo \
 	src/lite/lp/$(DEPDIR)/congestion-mark-lite.Plo \
 	src/lite/lp/$(DEPDIR)/incoming-face-id-lite.Plo \
@@ -1734,6 +1739,7 @@ ndn_ind_cpp_headers = \
   include/ndn-ind/lite/encoding/tlv-0_3-wire-format-lite.hpp \
   include/ndn-ind/lite/encrypt/encrypted-content-lite.hpp \
   include/ndn-ind/lite/encrypt/algo/aes-algorithm-lite.hpp \
+  include/ndn-ind/lite/encrypt/algo/chacha20-algorithm-lite.hpp \
   include/ndn-ind/lite/encrypt/algo/des-algorithm-lite.hpp \
   include/ndn-ind/lite/lp/congestion-mark-lite.hpp \
   include/ndn-ind/lite/lp/incoming-face-id-lite.hpp \
@@ -1876,6 +1882,7 @@ libndn_c_la_SOURCES = ${ndn_ind_c_headers} \
   src/c/encoding/tlv/tlv.h \
   src/c/encrypt/encrypted-content.h \
   src/c/encrypt/algo/aes-algorithm_c.c src/c/encrypt/algo/aes-algorithm.h \
+  src/c/encrypt/algo/chacha20-algorithm_c.c src/c/encrypt/algo/chacha20-algorithm.h \
   src/c/encrypt/algo/des-algorithm_c.c src/c/encrypt/algo/des-algorithm.h \
   src/c/lp/congestion-mark_c.c src/c/lp/congestion-mark.h \
   src/c/lp/incoming-face-id_c.c src/c/lp/incoming-face-id.h \
@@ -1963,6 +1970,7 @@ libndn_ind_la_SOURCES = ${libndn_c_la_SOURCES} ${ndn_ind_cpp_headers} \
   src/lite/encoding/tlv-0_3-wire-format-lite.cpp \
   src/lite/encrypt/encrypted-content-lite.cpp \
   src/lite/encrypt/algo/aes-algorithm-lite.cpp \
+  src/lite/encrypt/algo/chacha20-algorithm-lite.cpp \
   src/lite/encrypt/algo/des-algorithm-lite.cpp \
   src/lite/lp/congestion-mark-lite.cpp \
   src/lite/lp/incoming-face-id-lite.cpp \
@@ -2449,6 +2457,9 @@ src/c/encrypt/algo/$(DEPDIR)/$(am__dirstamp):
 src/c/encrypt/algo/aes-algorithm_c.lo:  \
 	src/c/encrypt/algo/$(am__dirstamp) \
 	src/c/encrypt/algo/$(DEPDIR)/$(am__dirstamp)
+src/c/encrypt/algo/chacha20-algorithm_c.lo:  \
+	src/c/encrypt/algo/$(am__dirstamp) \
+	src/c/encrypt/algo/$(DEPDIR)/$(am__dirstamp)
 src/c/encrypt/algo/des-algorithm_c.lo:  \
 	src/c/encrypt/algo/$(am__dirstamp) \
 	src/c/encrypt/algo/$(DEPDIR)/$(am__dirstamp)
@@ -2717,6 +2728,9 @@ src/lite/encrypt/algo/$(DEPDIR)/$(am__dirstamp):
 	@$(MKDIR_P) src/lite/encrypt/algo/$(DEPDIR)
 	@: > src/lite/encrypt/algo/$(DEPDIR)/$(am__dirstamp)
 src/lite/encrypt/algo/aes-algorithm-lite.lo:  \
+	src/lite/encrypt/algo/$(am__dirstamp) \
+	src/lite/encrypt/algo/$(DEPDIR)/$(am__dirstamp)
+src/lite/encrypt/algo/chacha20-algorithm-lite.lo:  \
 	src/lite/encrypt/algo/$(am__dirstamp) \
 	src/lite/encrypt/algo/$(DEPDIR)/$(am__dirstamp)
 src/lite/encrypt/algo/des-algorithm-lite.lo:  \
@@ -3816,6 +3830,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/tlv/$(DEPDIR)/tlv-signature-info.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encoding/tlv/$(DEPDIR)/tlv-structure-decoder.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encrypt/algo/$(DEPDIR)/aes-algorithm_c.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/c/encrypt/algo/$(DEPDIR)/chacha20-algorithm_c.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/encrypt/algo/$(DEPDIR)/des-algorithm_c.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/lp/$(DEPDIR)/congestion-mark_c.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/c/lp/$(DEPDIR)/incoming-face-id_c.Plo@am__quote@ # am--include-marker
@@ -3869,6 +3884,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/algo/$(DEPDIR)/chacha20-algorithm-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/lp/$(DEPDIR)/congestion-mark-lite.Plo@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@src/lite/lp/$(DEPDIR)/incoming-face-id-lite.Plo@am__quote@ # am--include-marker
@@ -6232,6 +6248,7 @@ distclean: distclean-recursive
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-signature-info.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-structure-decoder.Plo
 	-rm -f src/c/encrypt/algo/$(DEPDIR)/aes-algorithm_c.Plo
+	-rm -f src/c/encrypt/algo/$(DEPDIR)/chacha20-algorithm_c.Plo
 	-rm -f src/c/encrypt/algo/$(DEPDIR)/des-algorithm_c.Plo
 	-rm -f src/c/lp/$(DEPDIR)/congestion-mark_c.Plo
 	-rm -f src/c/lp/$(DEPDIR)/incoming-face-id_c.Plo
@@ -6285,6 +6302,7 @@ distclean: distclean-recursive
 	-rm -f src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo
 	-rm -f src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo
+	-rm -f src/lite/encrypt/algo/$(DEPDIR)/chacha20-algorithm-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo
 	-rm -f src/lite/lp/$(DEPDIR)/congestion-mark-lite.Plo
 	-rm -f src/lite/lp/$(DEPDIR)/incoming-face-id-lite.Plo
@@ -6602,6 +6620,7 @@ maintainer-clean: maintainer-clean-recursive
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-signature-info.Plo
 	-rm -f src/c/encoding/tlv/$(DEPDIR)/tlv-structure-decoder.Plo
 	-rm -f src/c/encrypt/algo/$(DEPDIR)/aes-algorithm_c.Plo
+	-rm -f src/c/encrypt/algo/$(DEPDIR)/chacha20-algorithm_c.Plo
 	-rm -f src/c/encrypt/algo/$(DEPDIR)/des-algorithm_c.Plo
 	-rm -f src/c/lp/$(DEPDIR)/congestion-mark_c.Plo
 	-rm -f src/c/lp/$(DEPDIR)/incoming-face-id_c.Plo
@@ -6655,6 +6674,7 @@ maintainer-clean: maintainer-clean-recursive
 	-rm -f src/lite/encoding/$(DEPDIR)/tlv-0_3-wire-format-lite.Plo
 	-rm -f src/lite/encrypt/$(DEPDIR)/encrypted-content-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/aes-algorithm-lite.Plo
+	-rm -f src/lite/encrypt/algo/$(DEPDIR)/chacha20-algorithm-lite.Plo
 	-rm -f src/lite/encrypt/algo/$(DEPDIR)/des-algorithm-lite.Plo
 	-rm -f src/lite/lp/$(DEPDIR)/congestion-mark-lite.Plo
 	-rm -f src/lite/lp/$(DEPDIR)/incoming-face-id-lite.Plo
